Rename repo in sample YAML file

--- a/key.yaml
+++ b/key.yaml
@@ -4,20 +4,20 @@ secrets:
     destinations:
       - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in GitHub Actions"
         type: "github-secret"
-        repo: "lucasmelin/test-trash"
+        repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_KEY"
       - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in Dependabot"
         type: "github-dependabot"
-        repo: "lucasmelin/test-trash"
+        repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_KEY"
   - name: "SERVICE_ACCOUNT_USERNAME"
     description: "Secret username for the service account"
     destinations:
       - description: "SERVICE_ACCOUNT_USERNAME for lucasmelin/key-rotator in GitHub Actions"
         type: "github-secret"
-        repo: "lucasmelin/test-trash"
+        repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_USERNAME"
       - description: "SERVICE_ACCOUNT_USERNAME for lucasmelin/key-rotator in Dependabot"
         type: "github-dependabot"
-        repo: "lucasmelin/test-trash"
+        repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_USERNAME"
