--- a/key.yaml
+++ b/key.yaml
@@ -3,21 +3,21 @@ secrets:
     description: "Secret key for the service account"
     destinations:
       - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in GitHub Actions"
-        type: "github-secret"
+        type: "github-repository"
         repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_KEY"
       - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in Dependabot"
-        type: "github-dependabot"
+        type: "github-repository-dependabot"
         repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_KEY"
   - name: "SERVICE_ACCOUNT_USERNAME"
     description: "Secret username for the service account"
     destinations:
       - description: "SERVICE_ACCOUNT_USERNAME for lucasmelin/key-rotator in GitHub Actions"
-        type: "github-secret"
+        type: "github-repository"
         repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_USERNAME"
       - description: "SERVICE_ACCOUNT_USERNAME for lucasmelin/key-rotator in Dependabot"
-        type: "github-dependabot"
+        type: "github-repository-dependabot"
         repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_USERNAME"
