--- a/key.yaml
+++ b/key.yaml
@@ -10,14 +10,15 @@ secrets:
         type: "github-repository-dependabot"
         repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_KEY"
+      - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in Dependabot"
+        type: "github-repository-environment"
+        repo: "lucasmelin/key-rotator"
+        environment: "prod"
+        name: "SERVICE_ACCOUNT_KEY"
   - name: "SERVICE_ACCOUNT_USERNAME"
     description: "Secret username for the service account"
     destinations:
       - description: "SERVICE_ACCOUNT_USERNAME for lucasmelin/key-rotator in GitHub Actions"
         type: "github-repository"
-        repo: "lucasmelin/key-rotator"
-        name: "SERVICE_ACCOUNT_USERNAME"
-      - description: "SERVICE_ACCOUNT_USERNAME for lucasmelin/key-rotator in Dependabot"
-        type: "github-repository-dependabot"
         repo: "lucasmelin/key-rotator"
         name: "SERVICE_ACCOUNT_USERNAME"
