--- a/key.yaml
+++ b/key.yaml
@@ -2,23 +2,19 @@ secrets:
   - name: "SERVICE_ACCOUNT_KEY"
     description: "Secret key for the service account"
     destinations:
-      - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in GitHub Actions"
+      - name: "SERVICE_ACCOUNT_KEY"
         type: "github-repository"
         repo: "lucasmelin/key-rotator"
-        name: "SERVICE_ACCOUNT_KEY"
-      - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in Dependabot"
+      - name: "SERVICE_ACCOUNT_KEY"
         type: "github-repository-dependabot"
         repo: "lucasmelin/key-rotator"
-        name: "SERVICE_ACCOUNT_KEY"
-      - description: "SERVICE_ACCOUNT_KEY for lucasmelin/key-rotator in Dependabot"
+      - name: "SERVICE_ACCOUNT_KEY"
         type: "github-repository-environment"
         repo: "lucasmelin/key-rotator"
         environment: "prod"
-        name: "SERVICE_ACCOUNT_KEY"
   - name: "SERVICE_ACCOUNT_USERNAME"
     description: "Secret username for the service account"
     destinations:
-      - description: "SERVICE_ACCOUNT_USERNAME for lucasmelin/key-rotator in GitHub Actions"
+      - name: "SERVICE_ACCOUNT_USERNAME"
         type: "github-repository"
         repo: "lucasmelin/key-rotator"
-        name: "SERVICE_ACCOUNT_USERNAME"
